# amnesia

./: .gitignore  LICENSE.md  README.md  amnesia.cabal  amnesia.hs
src/: Amnesia.hs  Parser.hs  Stacks.hs
