cabal-version:      3.0
name:               amnesia
version:            0.1.0.0
license:            ISC
license-file:       LICENSE
author:             Ramon Asuncion
maintainer:         asuncionbatista@gmail.com
category:           Language
build-type:         Simple
common warnings
    ghc-options: -Wall
executable amnesia
    import:           warnings
    main-is:          Amnesia.hs
    build-depends:    base ^>=4.18.3.0
    hs-source-dirs:   src
    default-language: GHC2021
